application/web/test/src/main/java/com/tekgs/nextgen/duckies/view/invalidurl/InvalidUrlViewExpected.java
package com.tekgs.nextgen.duckies.view.invalidurl;

public class InvalidUrlViewExpected implements InvalidUrlViewCalibratable {

    public static InvalidUrlViewExpected getInstance() {
        return new InvalidUrlViewExpected();
    }

    @Override
    public String getMessage() {
        return "Sorry, page not found!";
    }
}